[gd_scene load_steps=28 format=3 uid="uid://ctdhomvmo6e63"]

[ext_resource type="Theme" uid="uid://c2mgco1emm577" path="res://Title/TitleStyle.tres" id="1_6nm6v"]
[ext_resource type="Shader" path="res://Title/BackGround.gdshader" id="2_b2r6n"]
[ext_resource type="Script" path="res://Title/TitleScene.gd" id="2_ft3rn"]
[ext_resource type="PackedScene" uid="uid://dj71foidl1nbr" path="res://Title/Main.tscn" id="3_6h4ks"]
[ext_resource type="AudioStream" uid="uid://bcwxh0xd32hek" path="res://Audio/Music/demo_scene.ogg" id="3_r8x1g"]
[ext_resource type="PackedScene" uid="uid://cnl53v0lrb1mv" path="res://Title/Options.tscn" id="4_oyfw7"]
[ext_resource type="AudioStream" uid="uid://bx3abwfykx10p" path="res://Audio/Sound/knock_iron.ogg" id="4_yg5wx"]
[ext_resource type="PackedScene" uid="uid://bsynmnxiy47ku" path="res://Title/Exit.tscn" id="6_201ko"]
[ext_resource type="PackedScene" uid="uid://vjy54fve2amm" path="res://Title/Beginning.tscn" id="7_vog78"]
[ext_resource type="PackedScene" uid="uid://c6vlyx2oac4o4" path="res://Title/Saves.tscn" id="7_wpuqt"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ymlre"]
shader = ExtResource("2_b2r6n")
shader_parameter/mouse = Vector2(0, 0)

[sub_resource type="Gradient" id="Gradient_ngv4d"]
interpolation_mode = 1
offsets = PackedFloat32Array(0, 0.9)
colors = PackedColorArray(1, 1, 1, 1, 0, 0.74902, 1, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_iir2o"]
gradient = SubResource("Gradient_ngv4d")
width = 100
height = 100
fill = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pqp76"]
bg_color = Color(1, 1, 1, 1)
border_width_bottom = 10
border_color = Color(0, 0.74902, 1, 1)

[sub_resource type="Gradient" id="Gradient_je605"]
colors = PackedColorArray(0, 0.74902, 1, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_c2ohh"]
gradient = SubResource("Gradient_je605")
width = 100
height = 1

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_676fo"]
texture = SubResource("GradientTexture2D_c2ohh")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2e5xr"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 10
border_color = Color(0, 0.74902, 1, 1)
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_detail = 1
expand_margin_left = 5.0
expand_margin_top = 5.0
expand_margin_right = 5.0
expand_margin_bottom = 10.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ksh2j"]
bg_color = Color(1, 1, 1, 1)
border_width_top = 5
border_color = Color(0, 0.74902, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_chap0"]
content_margin_left = 0.0
content_margin_top = 0.0
content_margin_right = 0.0
content_margin_bottom = 0.0
bg_color = Color(1, 1, 1, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 10
border_color = Color(0, 0.74902, 1, 1)
corner_radius_top_right = 45
corner_radius_bottom_right = 45
corner_detail = 1
expand_margin_bottom = 5.0
anti_aliasing = false

[sub_resource type="GDScript" id="GDScript_rjjkb"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qaq6q"]
content_margin_left = 0.0
content_margin_top = 0.0
content_margin_right = 0.0
content_margin_bottom = 0.0
bg_color = Color(0, 0.74902, 1, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 10
border_color = Color(0, 0.74902, 1, 1)
corner_radius_top_right = 45
corner_radius_bottom_right = 45
corner_detail = 1
expand_margin_bottom = 5.0
anti_aliasing = false
script = SubResource("GDScript_rjjkb")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xysp5"]
content_margin_left = 0.0
content_margin_top = 0.0
content_margin_right = 0.0
content_margin_bottom = 0.0
bg_color = Color(0, 0.74902, 1, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 10
border_color = Color(0, 0.74902, 1, 1)
corner_radius_top_right = 45
corner_radius_bottom_right = 45
corner_detail = 1
expand_margin_bottom = 5.0
anti_aliasing = false
script = SubResource("GDScript_rjjkb")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_t2123"]
content_margin_left = 0.0
content_margin_top = 0.0
content_margin_right = 0.0
content_margin_bottom = 0.0
bg_color = Color(1, 1, 1, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 10
border_color = Color(0.74902, 0.74902, 0.74902, 1)
corner_radius_top_right = 45
corner_radius_bottom_right = 45
corner_detail = 1
expand_margin_bottom = 5.0
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_f8j2n"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0, 1, 1, 1)
corner_radius_top_right = 45
corner_radius_bottom_right = 45
corner_detail = 1

[sub_resource type="InputEventAction" id="InputEventAction_8cm0h"]
action = &"ui_cancel"

[sub_resource type="Shortcut" id="Shortcut_ppty1"]
events = [SubResource("InputEventAction_8cm0h")]

[node name="Screen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_6nm6v")
script = ExtResource("2_ft3rn")

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_r8x1g")
autoplay = true
bus = &"Music"

[node name="ClickSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_yg5wx")
bus = &"SFX"

[node name="Background" type="TextureRect" parent="."]
texture_filter = 2
material = SubResource("ShaderMaterial_ymlre")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_iir2o")
stretch_mode = 1

[node name="Main" parent="." instance=ExtResource("3_6h4ks")]

[node name="Save_pan_u" type="PanelContainer" parent="."]
layout_mode = 0
offset_top = -100.0
offset_right = 1600.0
theme_override_styles/panel = SubResource("StyleBoxFlat_pqp76")

[node name="Label" type="Label" parent="Save_pan_u"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "save.title"
horizontal_alignment = 1

[node name="Beginning_title" type="Label" parent="."]
layout_mode = 0
offset_left = 25.0
offset_top = -200.0
offset_right = 376.0
offset_bottom = -131.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0.74902, 1, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 50
text = "beginning.title"

[node name="subtitle_background" type="Panel" parent="Beginning_title"]
layout_mode = 0
offset_left = -25.0
offset_top = 80.0
offset_right = 1575.0
offset_bottom = 130.0
theme_override_styles/panel = SubResource("StyleBoxTexture_676fo")

[node name="subtitle" type="Label" parent="Beginning_title/subtitle_background"]
layout_mode = 0
offset_left = 15.0
offset_right = 146.0
offset_bottom = 49.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0.74902, 1, 1)
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 35
text = "Subtitle"

[node name="Beginning_description" type="Control" parent="."]
layout_mode = 2
anchors_preset = 0
offset_left = -1100.0
offset_top = 160.0
offset_bottom = 860.0

[node name="description" type="ScrollContainer" parent="Beginning_description"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 2

[node name="description_text" type="RichTextLabel" parent="Beginning_description/description"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
bbcode_enabled = true
text = "Description [i]Not found[/i]
----------------------------------------------------------------------------------------------------------------------------------------------------------------------#"

[node name="Beginning" parent="." instance=ExtResource("7_vog78")]
layout_mode = 0
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 2998.0
offset_right = 3998.0
offset_bottom = 635.0
grow_horizontal = 1
grow_vertical = 1

[node name="DemoScene" parent="Beginning" index="1"]
focus_neighbor_left = NodePath("../../Beginning_description/description")
focus_neighbor_right = NodePath("../../LaunchButton")

[node name="SpareTime" parent="Beginning" index="3"]
focus_neighbor_left = NodePath("../../Beginning_description/description")
focus_neighbor_right = NodePath("../../LaunchButton")

[node name="BodyOfMetal" parent="Beginning" index="4"]
focus_neighbor_left = NodePath("../../Beginning_description/description")
focus_neighbor_right = NodePath("../../LaunchButton")

[node name="Beginning_arrow" type="Panel" parent="."]
layout_mode = 0
offset_left = 1650.0
offset_top = 260.0
offset_right = 1670.0
offset_bottom = 285.0
theme_override_styles/panel = SubResource("StyleBoxFlat_2e5xr")

[node name="Save_pan_d" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_right = 1600.0
offset_bottom = 100.0
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_ksh2j")

[node name="LaunchButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -250.0
offset_right = -41.0
offset_bottom = 100.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 45
theme_override_styles/normal = SubResource("StyleBoxFlat_chap0")
theme_override_styles/hover = SubResource("StyleBoxFlat_qaq6q")
theme_override_styles/pressed = SubResource("StyleBoxFlat_xysp5")
theme_override_styles/disabled = SubResource("StyleBoxFlat_t2123")
theme_override_styles/focus = SubResource("StyleBoxFlat_f8j2n")
text = "beginning.launch"

[node name="Saves" parent="." instance=ExtResource("7_wpuqt")]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 900.0
offset_top = -375.0
offset_right = 1900.0
offset_bottom = 375.0

[node name="Online" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 1700.0
offset_top = -50.0
offset_right = 2700.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Online"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "online.na"
horizontal_alignment = 1

[node name="Options" parent="." instance=ExtResource("4_oyfw7")]
layout_mode = 1
offset_top = 550.0
offset_bottom = 1300.0

[node name="Exit" parent="." instance=ExtResource("6_201ko")]
custom_minimum_size = Vector2(0, 100)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 1200.0
offset_top = -50.0
offset_right = 1622.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2

[node name="BackButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 25.0
offset_right = 172.0
offset_bottom = 40.0
grow_vertical = 0
focus_mode = 0
mouse_default_cursor_shape = 2
shortcut = SubResource("Shortcut_ppty1")
text = "button.back"

[connection signal="pressed" from="Main/ScrollContainer/MainMenu/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="Main/ScrollContainer/MainMenu/ContinueButton" to="." method="_on_continue_button_pressed"]
[connection signal="pressed" from="Main/ScrollContainer/MainMenu/OnlineButton" to="." method="_on_online_button_pressed"]
[connection signal="pressed" from="Main/ScrollContainer/MainMenu/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="Main/ScrollContainer/MainMenu/ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="index_changed" from="Beginning" to="." method="_on_beginning_index_changed"]
[connection signal="pressed" from="Exit/VSplitContainer/ConfirmButton" to="." method="_on_confirm_button_pressed"]
[connection signal="pressed" from="Exit/VSplitContainer/CancelButton" to="." method="_on_cancel_button_pressed"]
[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]

[editable path="Main"]
[editable path="Beginning"]
[editable path="Exit"]
